@@ -3,7 +3,6 @@ package org.neo4j.integration.commands;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 import org.junit.Test;
@@ -13,11 +12,14 @@ import org.neo4j.integration.sql.DatabaseClient;
 import org.neo4j.integration.sql.QueryResults;
 import org.neo4j.integration.sql.StubQueryResults;
 import org.neo4j.integration.sql.metadata.JoinTable;
+import org.neo4j.integration.sql.metadata.Table;
 import org.neo4j.integration.sql.metadata.TableName;
 
 import static java.util.Arrays.asList;
 
+import static org.hamcrest.CoreMatchers.hasItems;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.Matchers.any;
 import static org.mockito.Mockito.mock;
@@ -26,17 +28,32 @@ import static org.mockito.Mockito.when;
 public class SchemaExportServiceTest
 {
 
-    private SchemaExportService schemaExportService = new SchemaExportService();
+    private DatabaseClient databaseClient = mock( DatabaseClient.class );
+    private SchemaExportService schemaExportService = new SchemaExportService( databaseClient );
 
     @Test
     public void exportSchemaShouldExportTablesAndJoinsForTwoTableJoin() throws Exception
     {
         // given
+        QueryResults personTableSchema = StubQueryResults.builder()
+                .columns( "COLUMN_NAME", "REFERENCED_TABLE_NAME", "COLUMN_KEY" )
+                .addRow( "id", null, "PRI" )
+                .addRow( "username", null, "Data" )
+                .addRow( "addressId", "Address", "MUL" )
+                .build();
+
+
         QueryResults personResults = StubQueryResults.builder()
                 .columns( "COLUMN_NAME", "DATA_TYPE", "COLUMN_TYPE" )
                 .addRow( "id", "INT", "PrimaryKey" )
                 .addRow( "username", "TEXT", "Data" )
                 .addRow( "addressId", "int", "ForeignKey" )
+                .build();
+
+        QueryResults addressTableSchema = StubQueryResults.builder()
+                .columns( "COLUMN_NAME", "REFERENCED_TABLE_NAME", "COLUMN_KEY" )
+                .addRow( "id", null, "PRI" )
+                .addRow( "postcode", null, "Data" )
                 .build();
 
         QueryResults addressResults = StubQueryResults.builder()
@@ -59,25 +76,25 @@ public class SchemaExportServiceTest
                 .build();
 
 
-        DatabaseClient databaseClient = mock( DatabaseClient.class );
+        TableName person = new TableName( "test.Person" );
+        TableName address = new TableName( "test.Address" );
+
+        when( databaseClient.tableNames() ).thenReturn( asList( person, address ) );
         when( databaseClient.executeQuery( any( String.class ) ) )
+                .thenReturn( AwaitHandle.forReturnValue( personTableSchema ) )
                 .thenReturn( AwaitHandle.forReturnValue( personResults ) )
-                .thenReturn( AwaitHandle.forReturnValue( addressResults ) )
-                .thenReturn( AwaitHandle.forReturnValue( joinResults ) );
+                .thenReturn( AwaitHandle.forReturnValue( joinResults ) )
+                .thenReturn( AwaitHandle.forReturnValue( addressTableSchema ) )
+                .thenReturn( AwaitHandle.forReturnValue( addressResults ) );
 
         // when
-        SchemaExport schemaExport = schemaExportService.doExport(
-                new SchemaDetails( "test", "Person", "Address", Optional.empty() ),
-                () -> databaseClient );
+        SchemaExport schemaExport = schemaExportService.inspect();
 
         // then
-        List<String> tableNames = schemaExport.tables().stream().map( t -> t.name().fullName() ).collect( Collectors
-                .toList() );
+        List<TableName> tableNames = schemaExport.tables().stream().map( Table::name ).collect( Collectors.toList() );
 
-        assertEquals( asList( "test.Person", "test.Address" ), tableNames );
-        assertEquals( asList( new TableName( "test.Person" ), new TableName( "test.Address" ) ),
-                schemaExport.joins().stream().findFirst().get().tableNames() );
-
+        assertThat( tableNames, hasItems( person, address ) );
+        assertThat( schemaExport.joins().stream().findFirst().get().tableNames(), hasItems( person, address ) );
         assertTrue( schemaExport.joinTables().isEmpty() );
     }
 
@@ -85,16 +102,34 @@ public class SchemaExportServiceTest
     public void exportSchemaShouldExportTablesAndJoinsForThreeTableJoin() throws Exception
     {
         // given
+        QueryResults studentTableSchema = StubQueryResults.builder()
+                .columns( "COLUMN_NAME", "REFERENCED_TABLE_NAME", "COLUMN_KEY" )
+                .addRow( "id", null, "PRI" )
+                .addRow( "username", null, "Data" )
+                .build();
+
         QueryResults studentResults = StubQueryResults.builder()
                 .columns( "COLUMN_NAME", "DATA_TYPE", "COLUMN_TYPE" )
                 .addRow( "id", "INT", "PrimaryKey" )
                 .addRow( "username", "TEXT", "Data" )
                 .build();
 
+        QueryResults courseTableSchema = StubQueryResults.builder()
+                .columns( "COLUMN_NAME", "REFERENCED_TABLE_NAME", "COLUMN_KEY" )
+                .addRow( "id", null, "PRI" )
+                .addRow( "name", null, "Data" )
+                .build();
+
         QueryResults courseResults = StubQueryResults.builder()
                 .columns( "COLUMN_NAME", "DATA_TYPE", "COLUMN_TYPE" )
                 .addRow( "id", "INT", "PrimaryKey" )
                 .addRow( "name", "TEXT", "Data" )
+                .build();
+
+        QueryResults joinTableSchema = StubQueryResults.builder()
+                .columns( "COLUMN_NAME", "REFERENCED_TABLE_NAME", "COLUMN_KEY" )
+                .addRow( "studentId", "Student", "MUL" )
+                .addRow( "courseId", "Course", "MUL" )
                 .build();
 
         QueryResults joinTableResults = StubQueryResults.builder()
@@ -116,23 +151,26 @@ public class SchemaExportServiceTest
                 .addRow( "test", "Student_Course", "courseId", "ForeignKey", "test", "Course", "id", "PrimaryKey" )
                 .build();
 
-        DatabaseClient databaseClient = mock( DatabaseClient.class );
+        TableName student = new TableName( "test.Student" );
+        TableName course = new TableName( "test.Course" );
+        TableName studentCourse = new TableName( "test.Student_Course" );
+        when( databaseClient.tableNames() ).thenReturn( asList( student, course, studentCourse ) );
         when( databaseClient.executeQuery( any( String.class ) ) )
+                .thenReturn( AwaitHandle.forReturnValue( studentTableSchema ) )
                 .thenReturn( AwaitHandle.forReturnValue( studentResults ) )
+                .thenReturn( AwaitHandle.forReturnValue( courseTableSchema ) )
                 .thenReturn( AwaitHandle.forReturnValue( courseResults ) )
+                .thenReturn( AwaitHandle.forReturnValue( joinTableSchema ) )
                 .thenReturn( AwaitHandle.forReturnValue( joinResults ) )
                 .thenReturn( AwaitHandle.forReturnValue( joinTableResults ) );
 
         // when
-        SchemaExport schemaExport = schemaExportService.doExport(
-                new SchemaDetails( "test", "Student", "Course", Optional.of( "Student_Course" ) ),
-                () -> databaseClient );
+        SchemaExport schemaExport = schemaExportService.inspect();
 
         // then
-        List<String> tableNames = schemaExport.tables().stream().map( t -> t.name().fullName() ).collect( Collectors
-                .toList() );
+        List<TableName> tableNames = schemaExport.tables().stream().map( Table::name ).collect( Collectors.toList() );
 
-        assertEquals( tableNames, asList( "test.Student", "test.Course" ) );
+        assertThat( tableNames, hasItems( student, course ) );
         assertTrue( schemaExport.joins().isEmpty() );
 
         JoinTable joinTable = new ArrayList<>( schemaExport.joinTables() ).get( 0 );
